# fc-firmware

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: arm-none-eabi.cmake
src/: stm32f4xx_hal_conf.h
